# camphr_models

./: info.json  model_map.json  pyproject.toml
camphr_models/: __init__.py  download.py
tests/: test_download.py
